--- a/css/mainWindow.css
+++ b/css/mainWindow.css
@@ -1,21 +1,121 @@
+/* general */
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    /* Center horizontally */
+    /* Remove default body margin */
+
 }
 
-#timer {
-    font-size: 48px;
-    margin: 10px auto;
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    align-content: center;
+/* header part */
+.header-part {
+    position: absolute;
+    width: 100%;
+}
+
+#fullProgress {
+    width: 100%;
+    height: 5px;
     background-color: lightgray;
+    color: rgb(255, 87, 87);
+}
+
+#passedPomodoro {
+    width: 20%;
+    height: 100%;
+    background-color: rgb(2, 166, 2);
+}
+
+.count-pomodoros-panel {
+    display: flex;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size: 15pt;
+    border-radius: 5px;
+    background-color: lightgray;
+}
+.count-pomodoros-panel p{
+    display: inline-block;
+}
+
+
+/* central part */
+.progress-circle {
+    width: 100px;
+    /* Diameter of the circle */
+    height: 100px;
+    border-radius: 50%;
+    /* Make it a circle */
+    background: conic-gradient(rgb(76, 175, 80) calc(50% * 3.6deg),
+    /* Adjust 3.6deg per percentage */
+    lightgray 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.progress-inner {
+    text-align: center;
+}
+
+.containter {
+    display: flex;
+    /* Set width to the shortest dimension */
+    width: min(100vw, 100vh);
+    /* Set height to the shortest dimension */
+    height: min(100vw, 100vh);
+    justify-content: center;
+    align-items: center;
+    top: 0;
+}
+
+#mode {
+    margin-top: 20px;
+    color: rgba(255, 255, 255, 0.543);
+}
+
+.potato {
+    display: block;
+    width: 50%;
+    height: 50%;
+    border-radius: 100%;
+    /* Make it a circle */
+    background-image: conic-gradient(rgb(255, 31, 31) calc(20 * 3.6deg),
+    /* Adjust 3.6deg per percentage */
+    lightgray 0);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    border: solid 2px lightgray;
+    box-shadow: 0px 0px 20px gray;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 button {
     padding: 10px 20px;
     font-size: 18px;
-    margin: 5px;
+}
+
+
+
+#timer {
+    font-weight: bold;
+    font-size: 5vw;
+}
+
+
+/* footer part */
+.footer-part {
+    position: absolute;
+    bottom: 0;
 }
