--- a/css/mainWindow.css
+++ b/css/mainWindow.css
@@ -19,13 +19,13 @@ body {
     width: 100%;
     height: 5px;
     background-color: lightgray;
-    color: rgb(255, 87, 87);
 }
 
-#passedPomodoro {
-    width: 20%;
+#passed-pomodoro {
+    width: 0%;
     height: 100%;
-    background-color: rgb(2, 166, 2);
+    background-color: blue;
+    transition: all 0.5s ease-in-out;
 }
 
 .count-pomodoros-panel {
@@ -45,35 +45,13 @@ body {
 
 
 /* central part */
-.progress-circle {
-    width: 100px;
-    /* Diameter of the circle */
-    height: 100px;
-    border-radius: 50%;
-    /* Make it a circle */
-    background: conic-gradient(rgb(76, 175, 80) calc(50% * 3.6deg),
-    /* Adjust 3.6deg per percentage */
-    lightgray 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.progress-inner {
-    text-align: center;
-}
 
 .containter {
-    display: flex;
+    /* display: flex; */
     /* Set width to the shortest dimension */
     width: min(100vw, 100vh);
     /* Set height to the shortest dimension */
     height: min(100vw, 100vh);
-    justify-content: center;
-    align-items: center;
     top: 0;
 }
 
@@ -82,31 +60,36 @@ body {
     color: rgba(255, 255, 255, 0.543);
 }
 
-.potato {
-    display: block;
+#tomato {
+    /* display: flex; */
     width: 50%;
     height: 50%;
+    margin-top: 25%;
+    margin-left: 25%;
     border-radius: 100%;
     /* Make it a circle */
-    background-image: conic-gradient(rgb(255, 31, 31) calc(20 * 3.6deg),
+    background-image: conic-gradient(lightgray calc(0 * 3.6deg),
     /* Adjust 3.6deg per percentage */
-    lightgray 0);
+    rgb(255, 87, 87) 0);
     justify-content: center;
-    align-items: center;
     text-align: center;
     color: white;
     border: solid 2px lightgray;
     box-shadow: 0px 0px 20px gray;
     font-size: 20px;
     font-weight: bold;
+    transition: all 0.5s ease-in-out;
 }
 
-button {
-    padding: 10px 20px;
-    font-size: 18px;
+#reset{
+    width: 100px;
+    height: 50px;
+    border: solid 1px rgb(218, 218, 218);
+    border-radius: 10px;
+    color: darkred;
+    margin-top: 20px;
+    margin-left: calc(50% - 50px);
 }
-
-
 
 #timer {
     font-weight: bold;
