--- a/css/mainWindow.css
+++ b/css/mainWindow.css
@@ -6,7 +6,6 @@ body {
     justify-content: center;
     /* Center horizontally */
     /* Remove default body margin */
-
 }
 
 /* header part */
@@ -44,7 +43,6 @@ body {
     display: inline-block;
 }
 
-
 /* central part */
 
 .containter {
@@ -69,9 +67,10 @@ body {
     margin-left: 25%;
     border-radius: 100%;
     /* Make it a circle */
-    background-image: conic-gradient(lightgray calc(0 * 3.6deg),
-            /* Adjust 3.6deg per percentage */
-            rgb(255, 87, 87) 0);
+    background-image: conic-gradient(
+        lightgray calc(0 * 3.6deg),
+        /* Adjust 3.6deg per percentage */ rgb(255, 87, 87) 0
+    );
     justify-content: center;
     text-align: center;
     color: white;
@@ -88,8 +87,8 @@ body {
     border: solid 1px rgb(218, 218, 218);
     border-radius: 10px;
     color: darkslategray;
-    margin-top: 20px;
-    margin-left: calc(50% - 50px);
+    /* margin-top: 20px;
+    margin-left: calc(50% - 50px); */
 }
 
 #timer {
@@ -97,9 +96,8 @@ body {
     font-size: 5vw;
 }
 
-
 /* footer part */
-#setting-button{
+#setting-button {
     border: none;
     border-radius: 0 5px 0 0;
     padding: 5px;
@@ -110,12 +108,12 @@ body {
     width: 100%;
     margin: 0;
 }
-#setting-items-group{
+#setting-items-group {
     display: none;
     background-color: lightgray;
 }
 
-.setting-block{
+.setting-block {
     display: flex;
     margin: 10px;
     align-items: center;
@@ -144,8 +142,8 @@ body {
     right: 0;
     bottom: 0;
     background-color: #ccc;
-    -webkit-transition: .2s;
-    transition: .2s;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
 }
 
 .slider:before {
@@ -156,19 +154,19 @@ body {
     left: 3px;
     bottom: 3px;
     background-color: white;
-    -webkit-transition: .2s;
-    transition: .2s;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
 }
 
-input:checked+.slider {
+input:checked + .slider {
     background-color: darkslategray;
 }
 
-input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked+.slider:before {
+input:checked + .slider:before {
     -webkit-transform: translateX(20px);
     -ms-transform: translateX(20px);
     transform: translateX(20px);
