--- a/css/index.css
+++ b/css/index.css
@@ -53,15 +53,22 @@ body {
 }
 
 /* Timer display */
+.top-half {
+    width: 100%;
+    height: calc(50% - 2.5px);
+    position: relative;
+}
 .timer-display {
     position: relative;
     width: 100%;
     height: 100%;
 }
-.top-half {
+
+.timer-numbers {
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: calc(50% - 2.5px);
-    position: relative;
+    height: 100%;
 }
 .timer-display::before {
     content: "";
@@ -85,14 +92,11 @@ body {
     transform: translate(-50%, -50%);
     border: 10px solid transparent;
     border-bottom-color: white;
-    margin-top: 10px;
+    margin-top: 2.5px;
 }
 
-.timer-numbers {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
+.digital-timer {
+    margin-top: 20px;
 }
 
 /* Control buttons */
