--- a/css/timer-ruler.css
+++ b/css/timer-ruler.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
     cursor: grab; /* Shows grabbable cursor */
 
     /* Hide scrollbar */
