--- a/css/timer-ruler.css
+++ b/css/timer-ruler.css
@@ -1,22 +1,26 @@
 .ruler-track {
     position: relative;
     bottom: 0;
-    width: 100%;
     height: 100%;
-}
-.ruler-track:active {
-    cursor: grabbing; /* Shows grabbing cursor when dragging */
 }
 
 .ruler-thumb {
     position: absolute;
+    height: 100%;
+    padding: 0 150px;
+}
+
+.ruler-thumb:hover {
+    cursor: grab;
+}
+.ruler-thumb:active {
+    cursor: grabbing; /* Shows grabbing cursor when dragging */
 }
 
 .ruler-divider-panel {
     position: relative;
     height: 100%; /* Space for ticks and numbers */
     /* Width will be set by JavaScript */
-    background-color: rgba(0, 255, 255, 0.1);
 }
 
 /* Small ticks */
