--- a/css/index.css
+++ b/css/index.css
@@ -17,9 +17,10 @@ body {
 .timer-container {
     width: 300px;
     height: 300px;
-    background-color: #ff3b3b;
+    /* background-color: #ff3b3b; */
+    background-color: lightgray;
     border-radius: 30px;
-    color: white;
+    color: black;
     text-align: center;
     position: relative;
 }
