--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,19 @@
+:root {
+    --primary-color: #ff0000;
+    --secondary-color: #dddddd;
+    --background-color: #ffffff;
+    --text-color: #333333;
+    --button-color: #ffffff;
+}
 /* General Styles */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    transition:
+        background-color 0.3s ease,
+        color 0.3s ease;
 }
 
 body {
@@ -18,9 +28,9 @@ body {
     width: 300px;
     height: 300px;
     /* background-color: #ff3b3b; */
-    background-color: lightgray;
+    background-color: var(--secondary-color);
     border-radius: 30px;
-    color: black;
+    color: var(--text-color);
     text-align: center;
     position: relative;
 }
@@ -38,17 +48,18 @@ body {
 .mode-buttons button {
     background: none;
     border: none;
-    color: white;
+    color: var(--text-color);
     font-size: 14px;
-    font-weight: bold;
     border-radius: 15px;
     padding: 5px 10px;
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.3;
 }
 
 .mode-buttons .active {
-    background-color: #c73030;
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    font-weight: bold;
     border-radius: 15px;
     opacity: 1;
 }
@@ -89,7 +100,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border: 10px solid transparent;
-    border-bottom-color: white;
+    border-bottom-color: var(--text-color);
     margin-top: 2.5px;
 }
 
@@ -112,12 +123,12 @@ body {
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    background-color: #c73030;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--text-color);
     font-size: 18px;
 }
 
 #start-pause {
-    background-color: white;
-    color: #c73030;
+    background-color: var(--primary-color);
+    color: var(--button-color);
 }
