--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     --primary-color: #ff0000;
     --secondary-color: #dddddd;
     --background-color: #ffffff;
+    --border-color: #cccccc;
     --text-color: #333333;
     --button-color: #ffffff;
 }
@@ -21,7 +22,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
 }
 
 .timer-container {
@@ -29,7 +29,8 @@ body {
     height: 300px;
     /* background-color: #ff3b3b; */
     background-color: var(--secondary-color);
-    border-radius: 30px;
+    border: 2px solid var(--border-color);
+    border-radius: 60px;
     color: var(--text-color);
     text-align: center;
     position: relative;
@@ -38,7 +39,7 @@ body {
 /* Mode buttons */
 .mode-buttons {
     position: absolute;
-    top: 10px;
+    bottom: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -106,6 +107,7 @@ body {
 
 .digital-timer {
     margin-top: 20px;
+    /* display: none; */
 }
 
 /* Control buttons */
