--- a/css/timer-ruler.css
+++ b/css/timer-ruler.css
@@ -48,6 +48,6 @@
     position: absolute;
     transform: translateX(-50%);
     bottom: 12px;
-    font-size: 20px;
+    font-size: 40pt;
     font-weight: bold;
 }
